Basic auth. Some separation of concerns work.
